# oyun

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog-2005  ChangeLog-2006  ChangeLog-2007  ChangeLog-2008  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  Doxyfile  NEWS  README  README.md  THANKS  _config.yml  documentation.html  documentation.md  downloads.html  faq.md  index.html  screenshots.html
_layouts/: default.html  post.html  toplevel.html
_posts/: 2010-11-07-Evolutionary-Tournament-Finished-Page.md  2010-11-07-One-Shot-Tournament-Finished-Page.md  2010-11-07-One-Shot-Tournament-Page.md  2010-11-07-Player-Selection-Page.md  2010-11-07-Sample-Players.md  2010-11-07-Tournament-Type-Page.md  2010-11-07-Welcome-to-Logos.md  2011-06-16-Evolutionary-Tournament-Page.md  2011-06-16-Getting-Started.md  2011-06-16-Glossary.md  2011-06-16-One-Shot-Tournament-Finished-Page.md  2011-06-16-Oyun-Task-Pages.md  2011-06-16-Welcome-to-Oyun.md  2011-10-05-Evolutionary-Tournament-Finished-Page.md  2011-10-05-Installation.md  2011-10-05-Player-Selection-Page.md  2011-10-05-Release-Notes.md  2011-10-05-Tournament-Type-Page.md  About-Logos.md  Compiling-Logos.md  Development-Checklist.md  Downloads.md  Evolutionary-Tournament-Finished-Page.md  Evolutionary-Tournament-Page.md  Game-Theory-and-Evolution.md  Getting-Started.md  Glossary.md  Home.md  Installation.md  Logos-Task-Pages.md  One-Shot-Tournament-Finished-Page.md  One-Shot-Tournament-Page.md  Player-Selection-Page.md  Release-Notes.md  Release-Policy.md  Sample-Players.md  Screenshots.md  Tournament-Type-Page.md  Welcome-to-Logos.md
contrib/players/: host-annotated.txt  parasite-annotated.txt  tft.txt
contrib/players/class/: adame.txt  adamr.txt  amart.txt  brianh.txt  danielg.txt  dannyb.txt  devone.txt  emmettc.txt  jarrydl.txt  jonasj.txt  larab.txt  matthews.txt  mattm.txt  paulk.txt  philipk.txt  philipv.txt  ralphk.txt
css/: main.css
doc/doxygen/: annotated.html  classEvoFinishPage-members.html  classEvoFinishPage.html  classEvoGraphRenderer-members.html  classEvoGraphWindow-members.html  classEvoGraphWindow.html  classEvoPage-members.html  classEvoPage.html  classEvoTournament-members.html  classEvoTournament.html  classFSAPlayer-members.html  classFSAPlayer.html  classFSAState-members.html  classFSAState.html  classFinishPage-members.html  classFinishPage.html  classGame-members.html  classGame.html  classHtmlDialog-members.html  classHtmlDialog.html  classLogosApp-members.html  classLogosApp.html  classLogosWizard-members.html  classLogosWizard.html  classLogosWizardDropTarget-members.html  classLogosWizardDropTarget.html  classLogosWizardPage-members.html  classLogosWizardPage.html  classMatch-members.html  classMatch.html  classMatchDialog-members.html  classMatchDialog.html  classOneShotFinishPage-members.html  classOneShotFinishPage.html  classOneShotPage-members.html  classOneShotPage.html  classOyunApp-members.html  classOyunApp.html  classOyunWizard-members.html  classOyunWizard.html  (+49 more)
doc/doxygen/mainpages/: main.h
doc/doxygen/tools/: footer.inc
doc/manual/: .gitignore  CMakeLists.txt  RunHTMLTidy.cmake
doc/manual/pdf/: .gitignore  manual.tex
doc/manual/source/: evofinishpage.text  evopage.text  glossary.text  install.text  oneshotfinishpage.text  oneshotpage.text  pages.text  playerspage.text  release.text  started.text  typepage.text  welcome.text
doc/manual/tools/: .gitignore  logos-contents.hhc  logos-manual.tex  logos.hhp  oyun-contents.hhc  oyun-manual.tex  oyun.hhp  template.html
docs/: .gitignore  keep
doxygen/: annotated.html  classEvoFinishPage-members.html  classEvoFinishPage.html  classEvoGraphRenderer-members.html  classEvoGraphWindow-members.html  classEvoGraphWindow.html  classEvoPage-members.html  classEvoPage.html  classEvoTournament-members.html  classEvoTournament.html  classFSAPlayer-members.html  classFSAPlayer.html  classFSAState-members.html  classFSAState.html  classFinishPage-members.html  classFinishPage.html  classGame-members.html  classGame.html  classHtmlDialog-members.html  classHtmlDialog.html  classLogosApp-members.html  classLogosApp.html  classLogosWizard.html  classLogosWizardDropTarget-members.html  classLogosWizardDropTarget.html  classLogosWizardPage-members.html  classLogosWizardPage.html  classMatch-members.html  classMatch.html  classMatchDialog-members.html  classMatchDialog.html  classOneShotFinishPage-members.html  classOneShotFinishPage.html  classOneShotPage-members.html  classOneShotPage.html  classOyunApp-members.html  classOyunWizard-members.html  classOyunWizard.html  classOyunWizardDropTarget-members.html  classOyunWizardDropTarget.html  (+49 more)
doxygen/mainpages/: main.h
js/: lightbox.js
lib/CppUnitLite/: CMakeLists.txt  Failure.cpp  Failure.h  Test.cpp  Test.h  TestHarness.h  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  TestResult.h
logo/: oyun-icon.ai  oyun-logo.ai
samples/: aw.txt  host.txt  parasite.txt  tft.txt
src/: .gitignore  CMakeLists.txt
src/common/: error.cpp  error.h  filesystem.cpp  filesystem.h  rng.cpp  rng.h  testmain.cpp
src/game/: fsaplayer.cpp  fsaplayer.h  game.cpp  game.h  player.cpp  player.h  prisoner.cpp  prisoner.h  random.cpp  random.h  titfortat.cpp  titfortat.h
src/tourney/: evotournament.cpp  evotournament.h  match.cpp  match.h  tournament.cpp  tournament.h
src/ui/: evofinishpage.cpp  evofinishpage.h  evopage.cpp  evopage.h  finishpage.cpp  finishpage.h  logosapp.cpp  logosapp.h  logoswizard.cpp  logoswizard.h  matchdialog.cpp  matchdialog.h  oneshotfinishpage.cpp  oneshotfinishpage.h  oneshotpage.cpp  oneshotpage.h  oyunapp.cpp  oyunapp.h  oyunwizard.cpp  oyunwizard.h  playerspage.cpp  playerspage.h  typepage.cpp  typepage.h
src/ui/tools/: htmldialog.cpp  htmldialog.h  logoswizardpage.cpp  logoswizardpage.h  oyunwizardpage.cpp  oyunwizardpage.h
tools/hhp2cached/: .gitignore  CMakeLists.txt  hhp2cached.cpp
